Tweak CryptauthDeviceManager to store fetched BeaconSeed data in Base64URL encoding, and retrieve it as raw data. This is necessary because CryptauthDeviceManager assumed that BeacondSeed data from the server was Base64 encoded, when in reality it was raw.

BUG=678145

Review-Url: https://codereview.chromium.org/2611913002
Cr-Commit-Position: refs/heads/master@{#441450}

Former-commit-id: ac31f879c80a4bbb2a1b089da4ea073d87d5060b